[tool.poetry]
name = "api-best-cars"
version = "0.1.0"
description = ""
authors = ["Artem <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "api_best_cars"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


